--- a/Llama_2_7b_chat_hf_eval_staatsexam.ipynb
+++ b/Llama_2_7b_chat_hf_eval_staatsexam.ipynb
@@ -3,12 +3,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/simonmoedinger/dl_project/blob/main/Llama_2_7b_chat_hf_eval_staatsexam.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
+        "<a href=\"https://colab.research.google.com/github/simonmoedinger/llm_examples/blob/main/Llama_2_7b_chat_hf.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ],
+      "id": "view-in-github"
     },
     {
       "cell_type": "markdown",
@@ -2746,8 +2746,7 @@
     },
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "accelerator": "GPU",
     "widgets": {
