--- a/leolm/demo_leo-mistral-hessianai-7b.ipynb
+++ b/leolm/demo_leo-mistral-hessianai-7b.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "5ae7c534-0fb2-432b-a983-0e02f0c9550b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-12T13:19:19.505922600Z",
-     "start_time": "2024-01-12T13:19:19.470925200Z"
+     "end_time": "2024-01-13T14:30:38.084535400Z",
+     "start_time": "2024-01-13T14:30:38.065536300Z"
     }
    },
    "outputs": [],
@@ -19,12 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "842dd5ff-83c7-436f-a6d2-0f5c44f5c914",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-12T13:19:19.507923300Z",
-     "start_time": "2024-01-12T13:19:19.473922500Z"
+     "end_time": "2024-01-13T14:30:39.872505200Z",
+     "start_time": "2024-01-13T14:30:38.068536100Z"
     }
    },
    "outputs": [],
@@ -41,23 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "436a4dfae4bac7dc",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T13:19:29.663546300Z",
-     "start_time": "2024-01-12T13:19:19.481924Z"
+     "end_time": "2024-01-13T14:30:54.692812900Z",
+     "start_time": "2024-01-13T14:30:39.869506Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]",
+      "text/plain": "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "b66c983dac8a43d18a033864d4bd410f"
+       "model_id": "26ed9651b1974ffab2b5bc7b5d725887"
       }
      },
      "metadata": {},
@@ -67,8 +67,11 @@
    "source": [
     "from transformers import BitsAndBytesConfig\n",
     "\n",
-    "model_name = \"fully_trained_model/\"\n",
+    "#model_name = \"fully_trained_model/\"\n",
+    "#model_name = \"trained_on_chunk/\"\n",
+    "model_name = \"medalpaca/medalpaca-7b\"\n",
     "#model_name = \"LeoLM/leo-mistral-hessianai-7b\"\n",
+    "#model_name = \"mistralai/Mistral-7B-v0.1\"\n",
     "bnb_config = BitsAndBytesConfig(\n",
     "    load_in_4bit= True,\n",
     ")\n",
@@ -83,21 +86,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "93a5be9de6fa057f",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T13:19:29.727548600Z",
-     "start_time": "2024-01-12T13:19:29.664547100Z"
+     "end_time": "2024-01-13T14:30:54.976457700Z",
+     "start_time": "2024-01-13T14:30:54.698812900Z"
     }
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are using the default legacy behaviour of the <class 'transformers.models.llama.tokenization_llama.LlamaTokenizer'>. This is expected, and simply means that the `legacy` (previous) behavior will be used so nothing changes for you. If you want to use the new behaviour, set `legacy=False`. This should only be set if you understand what it means, and thoroughly read the reason why this was added as explained in https://github.com/huggingface/transformers/pull/24565\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": "(True, False)"
      },
-     "execution_count": 35,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,13 +122,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "id": "d6be9cb7c17832f8",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T13:19:29.727548600Z",
-     "start_time": "2024-01-12T13:19:29.715547500Z"
+     "end_time": "2024-01-13T14:30:54.982459200Z",
+     "start_time": "2024-01-13T14:30:54.978458100Z"
     }
    },
    "outputs": [],
@@ -141,13 +151,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "95ff80a7a740d601",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T13:19:29.728547Z",
-     "start_time": "2024-01-12T13:19:29.718548800Z"
+     "end_time": "2024-01-13T14:30:54.990458200Z",
+     "start_time": "2024-01-13T14:30:54.980457500Z"
     }
    },
    "outputs": [],
@@ -160,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "def prompt_model(prompt):\n",
@@ -172,53 +182,53 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T13:19:29.767545200Z",
-     "start_time": "2024-01-12T13:19:29.728547Z"
+     "end_time": "2024-01-13T14:30:55.028457900Z",
+     "start_time": "2024-01-13T14:30:54.991459Z"
     }
    },
    "id": "888ecf4e24eaee86"
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "id": "aee5cfd96cc34947",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T13:19:29.768547800Z",
-     "start_time": "2024-01-12T13:19:29.739545800Z"
+     "end_time": "2024-01-13T14:30:55.032458200Z",
+     "start_time": "2024-01-13T14:30:55.001457700Z"
     }
    },
    "outputs": [],
    "source": [
-    "questions_df = pd.read_csv(\"output.csv\")\n",
+    "questions_df = pd.read_csv(\"../output.csv\")\n",
     "questions_df[\"Prediction LLM\"] = [-1 for i in range(len(questions_df))]\n",
     "questions_df[\"Answer LLM\"] = [-1 for i in range(len(questions_df))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T13:19:29.768547800Z",
-     "start_time": "2024-01-12T13:19:29.753547300Z"
+     "end_time": "2024-01-13T14:30:55.033309400Z",
+     "start_time": "2024-01-13T14:30:55.024457400Z"
     }
    },
    "id": "45cd0ef604feb0d2"
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "id": "7aba98c46cd6efe",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T13:32:12.036215300Z",
-     "start_time": "2024-01-12T13:31:35.830786800Z"
+     "end_time": "2024-01-13T14:45:37.729293Z",
+     "start_time": "2024-01-13T14:42:59.559565600Z"
     }
    },
    "outputs": [
@@ -226,14 +236,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "248it [00:36,  6.85it/s]"
+      "248it [02:38,  1.57it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Values set: 238 / 248\n"
+      "Values set: 124 / 248\n"
      ]
     },
     {
@@ -266,6 +276,8 @@
     "                break\n",
     "                \n",
     "        #print(answer)\n",
+    "        \n",
+    "        \n",
     "        if found != False:\n",
     "            questions_df.loc[index, \"Answer LLM\"] = found\n",
     "        questions_df.loc[index, \"Prediction LLM\"] = answer\n",
@@ -274,29 +286,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "id": "b5194e3f9c58349c",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T13:33:02.375719800Z",
-     "start_time": "2024-01-12T13:33:02.367719300Z"
+     "end_time": "2024-01-13T14:45:49.760717900Z",
+     "start_time": "2024-01-13T14:45:49.752595Z"
     }
    },
    "outputs": [],
    "source": [
-    "questions_df.to_csv(\"leo_mistral_hessiani_output.csv\")"
+    "questions_df.to_csv(\"medalpaca_output.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "id": "ed43cb16ba034b9b",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T13:33:04.573506Z",
-     "start_time": "2024-01-12T13:33:04.569505200Z"
+     "end_time": "2024-01-13T14:35:43.387100400Z",
+     "start_time": "2024-01-13T14:35:43.383097800Z"
     }
    },
    "outputs": [],
@@ -307,13 +319,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "id": "67a6ec3d09c98719",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T13:33:06.327505800Z",
-     "start_time": "2024-01-12T13:33:06.321505Z"
+     "end_time": "2024-01-13T14:35:43.426097300Z",
+     "start_time": "2024-01-13T14:35:43.384100300Z"
     }
    },
    "outputs": [
@@ -321,7 +333,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.28991596638655465\n"
+      "Accuracy: 0.14814814814814814\n"
      ]
     }
    ],
