--- a/staatsexamen/model_answers/staatsexamen_evaluation_framework.ipynb
+++ b/staatsexamen/model_answers/staatsexamen_evaluation_framework.ipynb
@@ -6,8 +6,8 @@
    "id": "5ae7c534-0fb2-432b-a983-0e02f0c9550b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-15T16:04:11.894476500Z",
-     "start_time": "2024-01-15T16:04:11.878476700Z"
+     "end_time": "2024-01-15T16:56:57.191045600Z",
+     "start_time": "2024-01-15T16:56:57.182048Z"
     }
    },
    "outputs": [],
@@ -23,8 +23,8 @@
    "id": "842dd5ff-83c7-436f-a6d2-0f5c44f5c914",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-15T16:04:13.058429800Z",
-     "start_time": "2024-01-15T16:04:11.882476400Z"
+     "end_time": "2024-01-15T16:56:58.455089Z",
+     "start_time": "2024-01-15T16:56:57.186046600Z"
     }
    },
    "outputs": [],
@@ -46,8 +46,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-15T16:04:21.474109700Z",
-     "start_time": "2024-01-15T16:04:13.059429900Z"
+     "end_time": "2024-01-15T16:57:07.965145400Z",
+     "start_time": "2024-01-15T16:56:58.458089500Z"
     }
    },
    "outputs": [
@@ -57,7 +57,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "df6de4eeaaef4a75bd5957775d4c72df"
+       "model_id": "4aab08e07a164bc092fa13aab79c4e23"
       }
      },
      "metadata": {},
@@ -67,12 +67,12 @@
    "source": [
     "from transformers import BitsAndBytesConfig\n",
     "\n",
-    "#model_name = \"fully_trained_model/\"\n",
-    "#model_name = \"trained_on_chunk/\"\n",
+    "#model_name = \"../../leolm/fully_trained_model\"\n",
+    "model_name = \"../../leolm/trained_on_chunk\"\n",
     "#model_name = \"medalpaca/medalpaca-7b\"\n",
     "#model_name = \"meta-llama/Llama-2-7b-hf\"\n",
     "#model_name = \"meta-llama/Llama-2-7b-chat-hf\"\n",
-    "model_name = \"LeoLM/leo-mistral-hessianai-7b\"\n",
+    "#model_name = \"LeoLM/leo-mistral-hessianai-7b\"\n",
     "#model_name = \"mistralai/Mistral-7B-v0.1\"\n",
     "bnb_config = BitsAndBytesConfig(\n",
     "    load_in_4bit= True,\n",
@@ -93,8 +93,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-15T16:04:21.626110700Z",
-     "start_time": "2024-01-15T16:04:21.476109800Z"
+     "end_time": "2024-01-15T16:57:08.009143200Z",
+     "start_time": "2024-01-15T16:57:07.966142900Z"
     }
    },
    "outputs": [
@@ -122,8 +122,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-15T16:04:21.626110700Z",
-     "start_time": "2024-01-15T16:04:21.625109500Z"
+     "end_time": "2024-01-15T16:57:08.014143900Z",
+     "start_time": "2024-01-15T16:57:08.011143500Z"
     }
    },
    "outputs": [],
@@ -151,8 +151,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-15T16:04:21.636111200Z",
-     "start_time": "2024-01-15T16:04:21.627111800Z"
+     "end_time": "2024-01-15T16:57:08.028145100Z",
+     "start_time": "2024-01-15T16:57:08.014143900Z"
     }
    },
    "outputs": [],
@@ -198,8 +198,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-15T16:04:21.646110800Z",
-     "start_time": "2024-01-15T16:04:21.636111200Z"
+     "end_time": "2024-01-15T16:57:08.038143700Z",
+     "start_time": "2024-01-15T16:57:08.029144800Z"
     }
    },
    "id": "888ecf4e24eaee86"
@@ -211,8 +211,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-15T16:04:21.679107600Z",
-     "start_time": "2024-01-15T16:04:21.646110800Z"
+     "end_time": "2024-01-15T16:57:08.055142500Z",
+     "start_time": "2024-01-15T16:57:08.039143800Z"
     }
    },
    "outputs": [],
@@ -224,13 +224,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "7aba98c46cd6efe",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-15T16:14:35.358505900Z",
-     "start_time": "2024-01-15T16:14:22.348202400Z"
+     "end_time": "2024-01-15T17:05:13.332478Z",
+     "start_time": "2024-01-15T17:04:59.293574600Z"
     }
    },
    "outputs": [
@@ -238,14 +238,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "248it [00:13, 19.07it/s]"
+      "248it [00:14, 17.67it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Values set: 243 / 248\n"
+      "Values set: 248 / 248\n"
      ]
     },
     {
@@ -298,18 +298,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "b5194e3f9c58349c",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-15T16:15:18.816738600Z",
-     "start_time": "2024-01-15T16:15:18.809540600Z"
+     "end_time": "2024-01-15T17:06:10.172530Z",
+     "start_time": "2024-01-15T17:06:10.165530500Z"
     }
    },
    "outputs": [],
    "source": [
-    "questions_df.to_csv(\"leo-mistral-hessianai-7b_output.csv\")"
+    "questions_df.to_csv(\"chunk_output.csv\")"
    ]
   }
  ],
